update prelogin screen, and integrated api
